--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,27 @@
 {
-	"manifest_version": 2,
-	"applications": {
-		"gecko": {
-			"id": "metimedisplay@mjamsek.com"
-		}
-	},
-	"name": "METimeDisplay",
-	"version": "0.0.1",
-	"description": "Displays all times on ME in your local time format.",
-	"icons": {
-		"48": "icons/icon-48.png"
-	},
-	"content_scripts": [
-		{
-			"matches": ["*://*.medieval-europe.eu/*"],
-			"js": ["skripta.js"]
-		}
-	]
+  "manifest_version": 2,
+  "applications": {
+    "gecko": {
+      "id": "metimedisplay@mjamsek.com"
+    }
+  },
+  "name": "METimeDisplay",
+  "version": "0.0.1",
+  "description": "Displays all times on ME in your local time format.",
+  "icons": {
+    "48": "icons/icon-48.png"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.medieval-europe.eu/*"
+      ],
+      "js": [
+        "src/js/skripta.js"
+      ],
+      "css": [
+        "src/css/stili.css"
+      ]
+    }
+  ]
 }
