--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
       "error",
       "always"
     ],
-    "padded-blocks": "off"
+    "padded-blocks": "off",
+    "space-before-function-paren": "off"
   }
 }
