--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docs": "gulp docs",
+    "docs:clean": "gulp clean-docs",
+    "docs:build": "gulp docs && gulp commit-docs"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,11 @@
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-promise": "^3.6.0"
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-git": "^2.7.0",
+    "gulp-jsdoc3": "^2.0.0"
   }
 }
