--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
   "env": {
     "browser": true
   },
-  "extends": "standard",
+  "extends": "eslint:recommended",
   "rules": {
     "indent": [
       "error",
