--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "me_firefox_extension",
-  "version": "0.0.1",
-  "main": "index.js",
+  "version": "0.0.2",
+  "main": "src/js/index.js",
   "scripts": {
     "docs": "gulp docs",
     "docs:clean": "gulp clean-docs",
